always add self to initial manager nodes if role is set (#23284)